[lesson2] Some additional notation adjustmnets.

--- a/basic_lessons/lesson2_tutorial.ipynb
+++ b/basic_lessons/lesson2_tutorial.ipynb
@@ -223,7 +223,7 @@
     "\n",
     "An element of SO(2) is simply a matrix with the correct properties, therefore we can define one directly in `numpy`. For\n",
     "\n",
-    "$$R(\\theta) = \\left[\\begin{array}{ccc}\n",
+    "$$\\mymatrix{R}(\\theta) = \\left[\\begin{array}{ccc}\n",
     "             \\cos{\\theta} & -\\sin{\\theta} \\\\\n",
     "             \\sin{\\theta} & \\cos{\\theta} \n",
     "        \\end{array}\\right],$$\n",
@@ -468,7 +468,7 @@
     "\n",
     "We can also perform pose transformations using sequential right multiplications when they are with respect to the _current_ frame. Note also that we can verify the lack of commutativity on these transformations.\n",
     "\n",
-    "For example, consider the following translation in 3D represented by a homogenous transformation matrix.\n",
+    "For example, consider a translation in 3D along the _World_ frame, represented by the homogenous transformation matrix below.\n",
     "\n",
     "$$\\mymatrix{H}^0_a = \\mymatrix{H}_a = \\left[\\begin{array}{ccc}\n",
     "                                         1 & 0 & 0 & 1 \\\\\n",
@@ -477,6 +477,7 @@
     "                                         0 & 0 & 0 & 1\n",
     "                                       \\end{array}\\right],$$\n",
     "\n",
+    "Consider a rotation in 3D about the _current_ frame, represented by the homogenous transformation matrix below.\n",
     "\n",
     "$$\\mymatrix{H}^a_b = \\left[\\begin{array}{ccc}\n",
     "                     \\cos{\\theta_{ab}} & -\\sin{\\theta_{ab}} & 0 & 0 \\\\\n",
@@ -485,14 +486,13 @@
     "                     0                 & 0                  & 0 & 1\n",
     "        \\end{array}\\right].$$\n",
     "\n",
-    "We can compute\n",
-    "\n",
+    "We can calculate their sequential combination as follows.\n",
     "\n",
     "$$\\mymatrix{H}^0_b = \\mymatrix{H}_b = \\mymatrix{H}_a\\mymatrix{H}^a_b$$\n",
     "\n",
-    "with $\\theta_{ab} = \\frac{\\pi}{4}$ as shown below. We also show that\n",
+    "We can compute this result with $\\theta_{ab} = \\frac{\\pi}{4}$ as shown in the piece of code below. We also show that\n",
     "\n",
-    "$$\\mymatrix{H}_a\\mymatrix{H}^a_b \\neq \\mymatrix{H}^a_b\\mymatrix{H}_a$$\n",
+    "$$\\mymatrix{H}_a\\mymatrix{H}^a_b \\neq \\mymatrix{H}^a_b\\mymatrix{H}_a,$$\n",
     "\n",
     "further reinforcing the importance of the order of operations."
    ]
@@ -699,10 +699,10 @@
     "    - Write down its general form in SO(2) so that all four elements are clearly visible.\n",
     "    - Using this written down solution, compute the SO(2) representation at $t=10$.\n",
     "2. Using SO(3) elements, calculate the final rigid body motion after four sequential transformations.\n",
-    "    - The first transformation is a rotation of $\\theta=\\frac{\\pi}{10}$ about the $z$-axis.\n",
-    "    - The second transformation is a translation of $d=0.3$ about the $z$-axis.\n",
-    "    - The third transformation is a translation of $a=0.5$ about the $x$-axis.\n",
-    "    - The forth and last transformation is a rotation of $\\alpha=-\\frac{pi}{2}$ about the $x$-axis."
+    "    - The first transformation is a rotation of $\\theta=\\frac{\\pi}{10}$ about the $z$-axis of the _World_ frame.\n",
+    "    - The second transformation is a translation of $d=0.3$ about the $z$-axis of the _current_ frame.\n",
+    "    - The third transformation is a translation of $a=0.5$ about the $x$-axis of the _current_ frame.\n",
+    "    - The forth and last transformation is a rotation of $\\alpha=-\\frac{pi}{2}$ about the $x$-axis of the _current_ frame."
    ]
   }
  ],
