[lesson2] Adjusting the homogenous transformation inverse.

--- a/basic_lessons/lesson2_tutorial.ipynb
+++ b/basic_lessons/lesson2_tutorial.ipynb
@@ -53,14 +53,19 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-06T10:06:12.163648Z",
+     "start_time": "2026-02-06T10:06:11.195328Z"
+    }
+   },
    "source": [
     "%%capture\n",
     "%pip install numpy\n",
     "%pip install numpy --break-system-packages"
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 13
   },
   {
    "cell_type": "markdown",
@@ -71,13 +76,18 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-06T10:06:12.169793Z",
+     "start_time": "2026-02-06T10:06:12.164481Z"
+    }
+   },
    "source": [
     "import numpy as np\n",
     "from math import pi, sin, cos"
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 14
   },
   {
    "cell_type": "markdown",
@@ -127,15 +137,27 @@
   {
    "cell_type": "code",
    "metadata": {
-    "trusted": true
+    "trusted": true,
+    "ExecuteTime": {
+     "end_time": "2026-02-06T10:06:12.181485Z",
+     "start_time": "2026-02-06T10:06:12.170340Z"
+    }
    },
    "source": [
     "p = np.array([1.0, 2.0])\n",
     "\n",
     "print(f\"p={p}\")"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p=[1. 2.]\n"
+     ]
+    }
+   ],
+   "execution_count": 15
   },
   {
    "cell_type": "markdown",
@@ -158,7 +180,11 @@
   {
    "cell_type": "code",
    "metadata": {
-    "trusted": true
+    "trusted": true,
+    "ExecuteTime": {
+     "end_time": "2026-02-06T10:06:12.190870Z",
+     "start_time": "2026-02-06T10:06:12.183359Z"
+    }
    },
    "source": [
     "p0 = np.array([1.0, 2.0])\n",
@@ -170,8 +196,16 @@
     "\n",
     "print(f\"p={p}\")"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p=[10. 14.]\n"
+     ]
+    }
+   ],
+   "execution_count": 16
   },
   {
    "cell_type": "markdown",
@@ -191,7 +225,11 @@
   {
    "cell_type": "code",
    "metadata": {
-    "trusted": true
+    "trusted": true,
+    "ExecuteTime": {
+     "end_time": "2026-02-06T10:06:12.206980Z",
+     "start_time": "2026-02-06T10:06:12.196743Z"
+    }
    },
    "source": [
     "p0 = np.array([1.0, 2.0])\n",
@@ -204,8 +242,16 @@
     "\n",
     "print(f\"p_={p_}\")"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p_=[0. 0.]\n"
+     ]
+    }
+   ],
+   "execution_count": 17
   },
   {
    "cell_type": "markdown",
@@ -234,7 +280,11 @@
   {
    "cell_type": "code",
    "metadata": {
-    "trusted": true
+    "trusted": true,
+    "ExecuteTime": {
+     "end_time": "2026-02-06T10:06:12.216727Z",
+     "start_time": "2026-02-06T10:06:12.211719Z"
+    }
    },
    "source": [
     "θ = pi/2\n",
@@ -244,8 +294,17 @@
     "\n",
     "print(f\"R={R}\")"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R=[[ 6.123234e-17 -1.000000e+00]\n",
+      " [ 1.000000e+00  6.123234e-17]]\n"
+     ]
+    }
+   ],
+   "execution_count": 18
   },
   {
    "cell_type": "markdown",
@@ -282,7 +341,11 @@
   {
    "cell_type": "code",
    "metadata": {
-    "trusted": true
+    "trusted": true,
+    "ExecuteTime": {
+     "end_time": "2026-02-06T10:06:12.236313Z",
+     "start_time": "2026-02-06T10:06:12.225715Z"
+    }
    },
    "source": [
     "θ = pi/2\n",
@@ -296,8 +359,18 @@
     "\n",
     "print(f\"H = {H}\")"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H = [[ 6.123234e-17 -1.000000e+00  1.000000e-01]\n",
+      " [ 1.000000e+00  6.123234e-17  2.000000e-01]\n",
+      " [ 0.000000e+00  0.000000e+00  1.000000e+00]]\n"
+     ]
+    }
+   ],
+   "execution_count": 19
   },
   {
    "cell_type": "markdown",
@@ -341,7 +414,11 @@
   {
    "cell_type": "code",
    "metadata": {
-    "trusted": true
+    "trusted": true,
+    "ExecuteTime": {
+     "end_time": "2026-02-06T10:06:12.247207Z",
+     "start_time": "2026-02-06T10:06:12.240559Z"
+    }
    },
    "source": [
     "Rz = np.array([[cos(θ),-sin(θ), 0],\n",
@@ -365,8 +442,24 @@
     "# A rotation about x\n",
     "print(f\"Rx={Rx}\")"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rz=[[ 6.123234e-17 -1.000000e+00  0.000000e+00]\n",
+      " [ 1.000000e+00  6.123234e-17  0.000000e+00]\n",
+      " [ 0.000000e+00  0.000000e+00  1.000000e+00]]\n",
+      "Ry=[[ 6.123234e-17  0.000000e+00  1.000000e+00]\n",
+      " [ 0.000000e+00  1.000000e+00  0.000000e+00]\n",
+      " [-1.000000e+00  0.000000e+00  6.123234e-17]]\n",
+      "Rx=[[ 1.000000e+00  0.000000e+00  0.000000e+00]\n",
+      " [ 0.000000e+00  6.123234e-17 -1.000000e+00]\n",
+      " [ 0.000000e+00  1.000000e+00  6.123234e-17]]\n"
+     ]
+    }
+   ],
+   "execution_count": 20
   },
   {
    "cell_type": "markdown",
@@ -384,7 +477,11 @@
   {
    "cell_type": "code",
    "metadata": {
-    "trusted": true
+    "trusted": true,
+    "ExecuteTime": {
+     "end_time": "2026-02-06T10:06:12.259722Z",
+     "start_time": "2026-02-06T10:06:12.253904Z"
+    }
    },
    "source": [
     "θa = pi/4\n",
@@ -405,8 +502,18 @@
     "Rc = Ra @ Ra_b @ Rb_c\n",
     "print(f\"Rc={Rc}\")"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rc=[[ 4.32978028e-17 -9.23879533e-01 -3.82683432e-01]\n",
+      " [ 4.32978028e-17  3.82683432e-01 -9.23879533e-01]\n",
+      " [ 1.00000000e+00  2.34326020e-17  5.65713056e-17]]\n"
+     ]
+    }
+   ],
+   "execution_count": 21
   },
   {
    "cell_type": "markdown",
@@ -420,7 +527,11 @@
   {
    "cell_type": "code",
    "metadata": {
-    "trusted": true
+    "trusted": true,
+    "ExecuteTime": {
+     "end_time": "2026-02-06T10:06:12.270925Z",
+     "start_time": "2026-02-06T10:06:12.264956Z"
+    }
    },
    "source": [
     "Ra_ = Rc @ Rb_c.T @ Ra_b.T \n",
@@ -430,8 +541,16 @@
     "else:\n",
     "    print('The results are too different.')\n"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The results are pretty much the same!\n"
+     ]
+    }
+   ],
+   "execution_count": 22
   },
   {
    "cell_type": "markdown",
@@ -475,7 +594,7 @@
     "                                         0 & 1 & 0 & 2 \\\\\n",
     "                                         0 & 0 & 1 & 3 \\\\\n",
     "                                         0 & 0 & 0 & 1\n",
-    "                                       \\end{array}\\right],$$\n",
+    "                                       \\end{array}\\right].$$\n",
     "\n",
     "Consider a rotation in 3D about the _current_ frame, represented by the homogenous transformation matrix below.\n",
     "\n",
@@ -500,7 +619,11 @@
   {
    "cell_type": "code",
    "metadata": {
-    "trusted": true
+    "trusted": true,
+    "ExecuteTime": {
+     "end_time": "2026-02-06T10:06:12.286276Z",
+     "start_time": "2026-02-06T10:06:12.276393Z"
+    }
    },
    "source": [
     "# An SE(3) translation\n",
@@ -519,19 +642,27 @@
     "                 [0,         0,        1,  0],\n",
     "                 [0,         0,        0,  1]])\n",
     "\n",
-    "# Ha then Ha_b\n",
-    "Hb = H0_a @ Ha_b\n",
+    "# H0_a then Ha_b\n",
+    "H0_b = H0_a @ Ha_b\n",
     "\n",
     "# Ha_b then Ha\n",
     "H_wrong = Ha_b @ H0_a\n",
     "\n",
-    "if np.isclose(Hb,H_wrong).all():\n",
+    "if np.isclose(H0_b,H_wrong).all():\n",
     "    print('The results are close!')\n",
     "else:\n",
     "    print('The results are far, therefore the operation is not commutative')"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The results are far, therefore the operation is not commutative\n"
+     ]
+    }
+   ],
+   "execution_count": 23
   },
   {
    "cell_type": "markdown",
@@ -552,30 +683,49 @@
   {
    "cell_type": "code",
    "metadata": {
-    "trusted": true
+    "trusted": true,
+    "ExecuteTime": {
+     "end_time": "2026-02-06T10:06:12.324134Z",
+     "start_time": "2026-02-06T10:06:12.291019Z"
+    }
    },
    "source": [
     "# Extract R from H\n",
-    "Rc = Hc[0:3,0:3] # The 3x3 Rotation matrix\n",
-    "tc = Hc[0:3,3].reshape((3,1)) # The 3x1 translation vector at the forth column. Reshape it into a column vector.\n",
+    "R0_b = H0_b[0:3,0:3] # The 3x3 Rotation matrix\n",
+    "t0_b = H0_b[0:3,3].reshape((3,1)) # The 3x1 translation vector at the forth column. Reshape it into a column vector.\n",
     "\n",
-    "A =  Rc.T\n",
-    "B = -Rc.T@tc\n",
+    "A =  R0_b.T\n",
+    "B = -R0_b.T @ t0_b\n",
     "C = np.array([0,0,0])\n",
     "D = np.array([1])\n",
     "\n",
     "# This is how you can use `np.block` to build a matrix like so\n",
     "# | A B |\n",
     "# | C D |\n",
-    "Hc_inv = np.block([[A, B], \n",
-    "                   [C, D]])\n",
+    "H0_b_inv = np.block([[A, B],\n",
+    "                     [C, D]])\n",
     "\n",
-    "print(f\"Rc_inv={Hc_inv}\")\n",
+    "print(f\"H0_b_inv={H0_b_inv}\")\n",
     "\n",
-    "print(f\"Rc @ Rc_inv = {Hc @ Hc_inv}\")"
+    "print(f\"H0_b @ H0_b_inv = {H0_b @ H0_b_inv}\")"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H0_b_inv=[[ 0.70710678  0.70710678  0.         -2.12132034]\n",
+      " [-0.70710678  0.70710678  0.         -0.70710678]\n",
+      " [ 0.          0.          1.         -3.        ]\n",
+      " [ 0.          0.          0.          1.        ]]\n",
+      "H0_b @ H0_b_inv = [[1.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
+      " [0.00000000e+00 1.00000000e+00 0.00000000e+00 2.22044605e-16]\n",
+      " [0.00000000e+00 0.00000000e+00 1.00000000e+00 0.00000000e+00]\n",
+      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 1.00000000e+00]]\n"
+     ]
+    }
+   ],
+   "execution_count": 24
   },
   {
    "metadata": {},
@@ -595,7 +745,12 @@
    ]
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-06T10:06:12.332146Z",
+     "start_time": "2026-02-06T10:06:12.324800Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "θ_a = pi/4.0 # As given in the exercise\n",
@@ -603,7 +758,7 @@
     "R_a = None # Replace None with your solution to this exercise."
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 25
   },
   {
    "metadata": {},
@@ -617,7 +772,12 @@
    ]
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-06T10:06:12.336638Z",
+     "start_time": "2026-02-06T10:06:12.332609Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "θ_b1 = pi/12.0 # As given in the exercise\n",
@@ -626,7 +786,7 @@
     "R_b = None # Replace None with your solution to this exercise."
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 26
   },
   {
    "metadata": {},
@@ -654,7 +814,12 @@
    ]
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-06T10:06:12.340548Z",
+     "start_time": "2026-02-06T10:06:12.336974Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "θ_c = pi/3.0 # As given in the exercise\n",
@@ -664,7 +829,7 @@
     "H_c = None # Replace None with your solution to this exercise."
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 27
   },
   {
    "metadata": {},
@@ -678,17 +843,22 @@
    ]
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-06T10:06:12.344364Z",
+     "start_time": "2026-02-06T10:06:12.341033Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "θ_d = pi/3.0 # As given in the exercise\n",
     "x_d = 2.0 # As given in the exercise\n",
     "y_d = 5.0 # As given in the exercise\n",
     "\n",
     "H_d = None # Replace None with your solution to this exercise."
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 28
   },
   {
    "metadata": {},
