[lesson2] Fix a pi that wasn't rendering correctly in latex.

--- a/basic_lessons/lesson2_tutorial.ipynb
+++ b/basic_lessons/lesson2_tutorial.ipynb
@@ -872,7 +872,7 @@
     "    - The first transformation is a rotation of $\\theta=\\frac{\\pi}{10}$ about the $z$-axis of the _World_ frame.\n",
     "    - The second transformation is a translation of $d=0.3$ about the $z$-axis of the _current_ frame.\n",
     "    - The third transformation is a translation of $a=0.5$ about the $x$-axis of the _current_ frame.\n",
-    "    - The forth and last transformation is a rotation of $\\alpha=-\\frac{pi}{2}$ about the $x$-axis of the _current_ frame."
+    "    - The forth and last transformation is a rotation of $\\alpha=-\\frac{\\pi}{2}$ about the $x$-axis of the _current_ frame."
    ]
   }
  ],
