[lesson2] Fix a pi that wasn't rendering correctly in latex.

--- a/basic_lessons/lesson2_tutorial.ipynb
+++ b/basic_lessons/lesson2_tutorial.ipynb
@@ -53,19 +53,14 @@
   },
   {
    "cell_type": "code",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-02-06T10:06:12.163648Z",
-     "start_time": "2026-02-06T10:06:11.195328Z"
-    }
-   },
+   "metadata": {},
    "source": [
     "%%capture\n",
     "%pip install numpy\n",
     "%pip install numpy --break-system-packages"
    ],
    "outputs": [],
-   "execution_count": 13
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -76,18 +71,13 @@
   },
   {
    "cell_type": "code",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-02-06T10:06:12.169793Z",
-     "start_time": "2026-02-06T10:06:12.164481Z"
-    }
-   },
+   "metadata": {},
    "source": [
     "import numpy as np\n",
     "from math import pi, sin, cos"
    ],
    "outputs": [],
-   "execution_count": 14
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -137,27 +127,15 @@
   {
    "cell_type": "code",
    "metadata": {
-    "trusted": true,
-    "ExecuteTime": {
-     "end_time": "2026-02-06T10:06:12.181485Z",
-     "start_time": "2026-02-06T10:06:12.170340Z"
-    }
+    "trusted": true
    },
    "source": [
     "p = np.array([1.0, 2.0])\n",
     "\n",
     "print(f\"p={p}\")"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "p=[1. 2.]\n"
-     ]
-    }
-   ],
-   "execution_count": 15
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -180,11 +158,7 @@
   {
    "cell_type": "code",
    "metadata": {
-    "trusted": true,
-    "ExecuteTime": {
-     "end_time": "2026-02-06T10:06:12.190870Z",
-     "start_time": "2026-02-06T10:06:12.183359Z"
-    }
+    "trusted": true
    },
    "source": [
     "p0 = np.array([1.0, 2.0])\n",
@@ -196,16 +170,8 @@
     "\n",
     "print(f\"p={p}\")"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "p=[10. 14.]\n"
-     ]
-    }
-   ],
-   "execution_count": 16
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -225,11 +191,7 @@
   {
    "cell_type": "code",
    "metadata": {
-    "trusted": true,
-    "ExecuteTime": {
-     "end_time": "2026-02-06T10:06:12.206980Z",
-     "start_time": "2026-02-06T10:06:12.196743Z"
-    }
+    "trusted": true
    },
    "source": [
     "p0 = np.array([1.0, 2.0])\n",
@@ -242,16 +204,8 @@
     "\n",
     "print(f\"p_={p_}\")"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "p_=[0. 0.]\n"
-     ]
-    }
-   ],
-   "execution_count": 17
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -280,11 +234,7 @@
   {
    "cell_type": "code",
    "metadata": {
-    "trusted": true,
-    "ExecuteTime": {
-     "end_time": "2026-02-06T10:06:12.216727Z",
-     "start_time": "2026-02-06T10:06:12.211719Z"
-    }
+    "trusted": true
    },
    "source": [
     "θ = pi/2\n",
@@ -294,17 +244,8 @@
     "\n",
     "print(f\"R={R}\")"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "R=[[ 6.123234e-17 -1.000000e+00]\n",
-      " [ 1.000000e+00  6.123234e-17]]\n"
-     ]
-    }
-   ],
-   "execution_count": 18
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -341,11 +282,7 @@
   {
    "cell_type": "code",
    "metadata": {
-    "trusted": true,
-    "ExecuteTime": {
-     "end_time": "2026-02-06T10:06:12.236313Z",
-     "start_time": "2026-02-06T10:06:12.225715Z"
-    }
+    "trusted": true
    },
    "source": [
     "θ = pi/2\n",
@@ -359,18 +296,8 @@
     "\n",
     "print(f\"H = {H}\")"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "H = [[ 6.123234e-17 -1.000000e+00  1.000000e-01]\n",
-      " [ 1.000000e+00  6.123234e-17  2.000000e-01]\n",
-      " [ 0.000000e+00  0.000000e+00  1.000000e+00]]\n"
-     ]
-    }
-   ],
-   "execution_count": 19
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -414,11 +341,7 @@
   {
    "cell_type": "code",
    "metadata": {
-    "trusted": true,
-    "ExecuteTime": {
-     "end_time": "2026-02-06T10:06:12.247207Z",
-     "start_time": "2026-02-06T10:06:12.240559Z"
-    }
+    "trusted": true
    },
    "source": [
     "Rz = np.array([[cos(θ),-sin(θ), 0],\n",
@@ -442,24 +365,8 @@
     "# A rotation about x\n",
     "print(f\"Rx={Rx}\")"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Rz=[[ 6.123234e-17 -1.000000e+00  0.000000e+00]\n",
-      " [ 1.000000e+00  6.123234e-17  0.000000e+00]\n",
-      " [ 0.000000e+00  0.000000e+00  1.000000e+00]]\n",
-      "Ry=[[ 6.123234e-17  0.000000e+00  1.000000e+00]\n",
-      " [ 0.000000e+00  1.000000e+00  0.000000e+00]\n",
-      " [-1.000000e+00  0.000000e+00  6.123234e-17]]\n",
-      "Rx=[[ 1.000000e+00  0.000000e+00  0.000000e+00]\n",
-      " [ 0.000000e+00  6.123234e-17 -1.000000e+00]\n",
-      " [ 0.000000e+00  1.000000e+00  6.123234e-17]]\n"
-     ]
-    }
-   ],
-   "execution_count": 20
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -477,11 +384,7 @@
   {
    "cell_type": "code",
    "metadata": {
-    "trusted": true,
-    "ExecuteTime": {
-     "end_time": "2026-02-06T10:06:12.259722Z",
-     "start_time": "2026-02-06T10:06:12.253904Z"
-    }
+    "trusted": true
    },
    "source": [
     "θa = pi/4\n",
@@ -502,18 +405,8 @@
     "Rc = Ra @ Ra_b @ Rb_c\n",
     "print(f\"Rc={Rc}\")"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Rc=[[ 4.32978028e-17 -9.23879533e-01 -3.82683432e-01]\n",
-      " [ 4.32978028e-17  3.82683432e-01 -9.23879533e-01]\n",
-      " [ 1.00000000e+00  2.34326020e-17  5.65713056e-17]]\n"
-     ]
-    }
-   ],
-   "execution_count": 21
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -527,11 +420,7 @@
   {
    "cell_type": "code",
    "metadata": {
-    "trusted": true,
-    "ExecuteTime": {
-     "end_time": "2026-02-06T10:06:12.270925Z",
-     "start_time": "2026-02-06T10:06:12.264956Z"
-    }
+    "trusted": true
    },
    "source": [
     "Ra_ = Rc @ Rb_c.T @ Ra_b.T \n",
@@ -541,16 +430,8 @@
     "else:\n",
     "    print('The results are too different.')\n"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The results are pretty much the same!\n"
-     ]
-    }
-   ],
-   "execution_count": 22
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -619,11 +500,7 @@
   {
    "cell_type": "code",
    "metadata": {
-    "trusted": true,
-    "ExecuteTime": {
-     "end_time": "2026-02-06T10:06:12.286276Z",
-     "start_time": "2026-02-06T10:06:12.276393Z"
-    }
+    "trusted": true
    },
    "source": [
     "# An SE(3) translation\n",
@@ -653,16 +530,8 @@
     "else:\n",
     "    print('The results are far, therefore the operation is not commutative')"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The results are far, therefore the operation is not commutative\n"
-     ]
-    }
-   ],
-   "execution_count": 23
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -683,11 +552,7 @@
   {
    "cell_type": "code",
    "metadata": {
-    "trusted": true,
-    "ExecuteTime": {
-     "end_time": "2026-02-06T10:06:12.324134Z",
-     "start_time": "2026-02-06T10:06:12.291019Z"
-    }
+    "trusted": true
    },
    "source": [
     "# Extract R from H\n",
@@ -709,23 +574,8 @@
     "\n",
     "print(f\"H0_b @ H0_b_inv = {H0_b @ H0_b_inv}\")"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "H0_b_inv=[[ 0.70710678  0.70710678  0.         -2.12132034]\n",
-      " [-0.70710678  0.70710678  0.         -0.70710678]\n",
-      " [ 0.          0.          1.         -3.        ]\n",
-      " [ 0.          0.          0.          1.        ]]\n",
-      "H0_b @ H0_b_inv = [[1.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
-      " [0.00000000e+00 1.00000000e+00 0.00000000e+00 2.22044605e-16]\n",
-      " [0.00000000e+00 0.00000000e+00 1.00000000e+00 0.00000000e+00]\n",
-      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 1.00000000e+00]]\n"
-     ]
-    }
-   ],
-   "execution_count": 24
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -745,12 +595,7 @@
    ]
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-02-06T10:06:12.332146Z",
-     "start_time": "2026-02-06T10:06:12.324800Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "θ_a = pi/4.0 # As given in the exercise\n",
@@ -758,7 +603,7 @@
     "R_a = None # Replace None with your solution to this exercise."
    ],
    "outputs": [],
-   "execution_count": 25
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -772,12 +617,7 @@
    ]
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-02-06T10:06:12.336638Z",
-     "start_time": "2026-02-06T10:06:12.332609Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "θ_b1 = pi/12.0 # As given in the exercise\n",
@@ -786,7 +626,7 @@
     "R_b = None # Replace None with your solution to this exercise."
    ],
    "outputs": [],
-   "execution_count": 26
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -814,12 +654,7 @@
    ]
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-02-06T10:06:12.340548Z",
-     "start_time": "2026-02-06T10:06:12.336974Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "θ_c = pi/3.0 # As given in the exercise\n",
@@ -829,7 +664,7 @@
     "H_c = None # Replace None with your solution to this exercise."
    ],
    "outputs": [],
-   "execution_count": 27
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -843,12 +678,7 @@
    ]
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-02-06T10:06:12.344364Z",
-     "start_time": "2026-02-06T10:06:12.341033Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "θ_d = pi/3.0 # As given in the exercise\n",
@@ -858,7 +688,7 @@
     "H_d = None # Replace None with your solution to this exercise."
    ],
    "outputs": [],
-   "execution_count": 28
+   "execution_count": null
   },
   {
    "metadata": {},
