[L3] Adding starting frame as zero to the SO(3) example.

--- a/basic_lessons/lesson2_tutorial.ipynb
+++ b/basic_lessons/lesson2_tutorial.ipynb
@@ -53,14 +53,19 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-08T11:48:53.982411Z",
+     "start_time": "2026-02-08T11:48:52.996429Z"
+    }
+   },
    "source": [
     "%%capture\n",
     "%pip install numpy\n",
     "%pip install numpy --break-system-packages"
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -71,13 +76,18 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-08T11:48:53.989102Z",
+     "start_time": "2026-02-08T11:48:53.983066Z"
+    }
+   },
    "source": [
     "import numpy as np\n",
     "from math import pi, sin, cos"
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -127,15 +137,27 @@
   {
    "cell_type": "code",
    "metadata": {
-    "trusted": true
+    "trusted": true,
+    "ExecuteTime": {
+     "end_time": "2026-02-08T11:48:53.995284Z",
+     "start_time": "2026-02-08T11:48:53.989652Z"
+    }
    },
    "source": [
     "p = np.array([1.0, 2.0])\n",
     "\n",
     "print(f\"p={p}\")"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p=[1. 2.]\n"
+     ]
+    }
+   ],
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -158,7 +180,11 @@
   {
    "cell_type": "code",
    "metadata": {
-    "trusted": true
+    "trusted": true,
+    "ExecuteTime": {
+     "end_time": "2026-02-08T11:48:54.008003Z",
+     "start_time": "2026-02-08T11:48:54.002363Z"
+    }
    },
    "source": [
     "p0 = np.array([1.0, 2.0])\n",
@@ -170,8 +196,16 @@
     "\n",
     "print(f\"p={p}\")"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p=[10. 14.]\n"
+     ]
+    }
+   ],
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -191,7 +225,11 @@
   {
    "cell_type": "code",
    "metadata": {
-    "trusted": true
+    "trusted": true,
+    "ExecuteTime": {
+     "end_time": "2026-02-08T11:48:54.022625Z",
+     "start_time": "2026-02-08T11:48:54.014821Z"
+    }
    },
    "source": [
     "p0 = np.array([1.0, 2.0])\n",
@@ -204,8 +242,16 @@
     "\n",
     "print(f\"p_={p_}\")"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p_=[0. 0.]\n"
+     ]
+    }
+   ],
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -234,7 +280,11 @@
   {
    "cell_type": "code",
    "metadata": {
-    "trusted": true
+    "trusted": true,
+    "ExecuteTime": {
+     "end_time": "2026-02-08T11:48:54.033749Z",
+     "start_time": "2026-02-08T11:48:54.028105Z"
+    }
    },
    "source": [
     "θ = pi/2\n",
@@ -244,8 +294,17 @@
     "\n",
     "print(f\"R={R}\")"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R=[[ 6.123234e-17 -1.000000e+00]\n",
+      " [ 1.000000e+00  6.123234e-17]]\n"
+     ]
+    }
+   ],
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -282,7 +341,11 @@
   {
    "cell_type": "code",
    "metadata": {
-    "trusted": true
+    "trusted": true,
+    "ExecuteTime": {
+     "end_time": "2026-02-08T11:48:54.053367Z",
+     "start_time": "2026-02-08T11:48:54.039405Z"
+    }
    },
    "source": [
     "θ = pi/2\n",
@@ -296,8 +359,18 @@
     "\n",
     "print(f\"H = {H}\")"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H = [[ 6.123234e-17 -1.000000e+00  1.000000e-01]\n",
+      " [ 1.000000e+00  6.123234e-17  2.000000e-01]\n",
+      " [ 0.000000e+00  0.000000e+00  1.000000e+00]]\n"
+     ]
+    }
+   ],
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -341,7 +414,11 @@
   {
    "cell_type": "code",
    "metadata": {
-    "trusted": true
+    "trusted": true,
+    "ExecuteTime": {
+     "end_time": "2026-02-08T11:48:54.067078Z",
+     "start_time": "2026-02-08T11:48:54.054258Z"
+    }
    },
    "source": [
     "Rz = np.array([[cos(θ),-sin(θ), 0],\n",
@@ -365,8 +442,24 @@
     "# A rotation about x\n",
     "print(f\"Rx={Rx}\")"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rz=[[ 6.123234e-17 -1.000000e+00  0.000000e+00]\n",
+      " [ 1.000000e+00  6.123234e-17  0.000000e+00]\n",
+      " [ 0.000000e+00  0.000000e+00  1.000000e+00]]\n",
+      "Ry=[[ 6.123234e-17  0.000000e+00  1.000000e+00]\n",
+      " [ 0.000000e+00  1.000000e+00  0.000000e+00]\n",
+      " [-1.000000e+00  0.000000e+00  6.123234e-17]]\n",
+      "Rx=[[ 1.000000e+00  0.000000e+00  0.000000e+00]\n",
+      " [ 0.000000e+00  6.123234e-17 -1.000000e+00]\n",
+      " [ 0.000000e+00  1.000000e+00  6.123234e-17]]\n"
+     ]
+    }
+   ],
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -376,7 +469,7 @@
     "\n",
     "Compositions in SO(3) follow the same rules as SO(2), where sequential rotations are represented by right multiplications. For instance,\n",
     "\n",
-    "$$\\mymatrix{R}_c = \\mymatrix{R}_a\\mymatrix{R}^a_b\\mymatrix{R}^b_c.$$\n",
+    "$$\\mymatrix{R}^0_c \\mymatrix{R}^0_a\\mymatrix{R}^a_b\\mymatrix{R}^b_c.$$\n",
     "\n",
     "This can be represented by the following equivalent piece of code using sample angles."
    ]
@@ -384,12 +477,16 @@
   {
    "cell_type": "code",
    "metadata": {
-    "trusted": true
+    "trusted": true,
+    "ExecuteTime": {
+     "end_time": "2026-02-08T11:48:54.082984Z",
+     "start_time": "2026-02-08T11:48:54.068586Z"
+    }
    },
    "source": [
-    "θa = pi/4\n",
-    "Ra = np.array([[cos(θa),-sin(θa), 0],\n",
-    "               [sin(θa), cos(θa), 0],\n",
+    "θ0_a = pi/4\n",
+    "R0_a = np.array([[cos(θ0_a),-sin(θ0_a), 0],\n",
+    "               [sin(θ0_a), cos(θ0_a), 0],\n",
     "               [0,      0,        1]])\n",
     "\n",
     "θa_b = -pi/2\n",
@@ -402,11 +499,21 @@
     "                 [0, cos(θb_c), -sin(θb_c)],\n",
     "                 [0, sin(θb_c),  cos(θb_c)]])\n",
     "\n",
-    "Rc = Ra @ Ra_b @ Rb_c\n",
-    "print(f\"Rc={Rc}\")"
+    "R0_c = R0_a @ Ra_b @ Rb_c\n",
+    "print(f\"R0_c={R0_c}\")"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R0_c=[[ 4.32978028e-17 -9.23879533e-01 -3.82683432e-01]\n",
+      " [ 4.32978028e-17  3.82683432e-01 -9.23879533e-01]\n",
+      " [ 1.00000000e+00  2.34326020e-17  5.65713056e-17]]\n"
+     ]
+    }
+   ],
+   "execution_count": 9
   },
   {
    "cell_type": "markdown",
@@ -420,7 +527,11 @@
   {
    "cell_type": "code",
    "metadata": {
-    "trusted": true
+    "trusted": true,
+    "ExecuteTime": {
+     "end_time": "2026-02-08T11:48:54.180705Z",
+     "start_time": "2026-02-08T11:48:54.083625Z"
+    }
    },
    "source": [
     "Ra_ = Rc @ Rb_c.T @ Ra_b.T \n",
@@ -430,8 +541,20 @@
     "else:\n",
     "    print('The results are too different.')\n"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Rc' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mNameError\u001B[39m                                 Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[10]\u001B[39m\u001B[32m, line 1\u001B[39m\n\u001B[32m----> \u001B[39m\u001B[32m1\u001B[39m Ra_ = \u001B[43mRc\u001B[49m @ Rb_c.T @ Ra_b.T \n\u001B[32m      3\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m np.allclose(Ra, Ra_):\n\u001B[32m      4\u001B[39m     \u001B[38;5;28mprint\u001B[39m(\u001B[33m'\u001B[39m\u001B[33mThe results are pretty much the same!\u001B[39m\u001B[33m'\u001B[39m)\n",
+      "\u001B[31mNameError\u001B[39m: name 'Rc' is not defined"
+     ]
+    }
+   ],
+   "execution_count": 10
   },
   {
    "cell_type": "markdown",
