[L2] Adding extra explanation about the inverse.

--- a/basic_lessons/lesson3_tutorial.ipynb
+++ b/basic_lessons/lesson3_tutorial.ipynb
@@ -320,19 +320,19 @@
     "Using elements of SE(3), we obtain each of the three transformations, as follows.\n",
     "\n",
     "$$\\begin{align}\n",
-    "\\mymatrix{H}^{B0}_{B0'}(q_{B0})&=\\left[\\begin{array}{ccc}\n",
+    "\\mymatrix{H}^{B0}_{B0'}(q_{B0})&=\\left[\\begin{array}{cccc}\n",
     "        1  & 0 & 0 & 0 \\\\\n",
     "        0  & 1 & 0 & 0 \\\\\n",
     "        0  & 0 & 1 & q_{B0}(t) \\\\\n",
     "        0  & 0 & 0 & 1\n",
     "\\end{array}\\right], \\\\\n",
-    "\\mymatrix{H}^{B0'}_{B1}&=\\left[\\begin{array}{ccc}\n",
+    "\\mymatrix{H}^{B0'}_{B1}&=\\left[\\begin{array}{cccc}\n",
     "        1   & 0 & 0 & 0\\\\\n",
     "        0   &  \\cos{\\frac{\\pi}{2}}  & -\\sin{\\frac{\\pi}{2}} & 0\\\\\n",
     "        0  & \\sin{\\frac{\\pi}{2}}  & \\cos{\\frac{\\pi}{2}} & 0\\\\\n",
     "        0  & 0             & 0            & 1\n",
     "\\end{array}\\right], \\\\\n",
-    "\\mymatrix{H}^{B1}_{B2}(q_{B1})&=\\left[\\begin{array}{ccc}\n",
+    "\\mymatrix{H}^{B1}_{B2}(q_{B1})&=\\left[\\begin{array}{cccc}\n",
     "        1  & 0 & 0 & 0 \\\\\n",
     "        0  & 1 & 0 & 0 \\\\\n",
     "        0  & 0 & 1 & q_{B1}(t) \\\\\n",
@@ -349,12 +349,7 @@
    ]
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-01-30T13:59:40.261932Z",
-     "start_time": "2026-01-30T13:59:40.233239Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "q_B0 = 0.2\n",
@@ -387,22 +382,8 @@
     "\n",
     "print(f\"The FKM for the PP robot at the specified configuration is\\n\\n H_B0_B2 = \\n{H_B0_B2}\")"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The FKM for the PP robot at the specified configuration is\n",
-      "\n",
-      " H_B0_B2 = \n",
-      "[[ 1.000000e+00  0.000000e+00  0.000000e+00  0.000000e+00]\n",
-      " [ 0.000000e+00  6.123234e-17 -1.000000e+00 -3.000000e-01]\n",
-      " [ 0.000000e+00  1.000000e+00  6.123234e-17  2.000000e-01]\n",
-      " [ 0.000000e+00  0.000000e+00  0.000000e+00  1.000000e+00]]\n"
-     ]
-    }
-   ],
-   "execution_count": 47
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -427,14 +408,14 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "q_A0 = pi/4.0 # As given in the exercise\n",
     "q_A1 = -0.1 # As given in the exercise\n",
     "\n",
     "H_A0_A2 = None # Replace None with your solution to this exercise."
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -457,9 +438,9 @@
   {
    "metadata": {},
    "cell_type": "code",
+   "source": "H_C0_C3 = None # Replace None with your solution to this exercise.",
    "outputs": [],
-   "execution_count": null,
-   "source": "H_C0_C3 = None # Replace None with your solution to this exercise."
+   "execution_count": null
   },
   {
    "metadata": {},
