--- a/basic_lessons/lesson2_tutorial.ipynb
+++ b/basic_lessons/lesson2_tutorial.ipynb
@@ -55,8 +55,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-08T11:48:53.982411Z",
-     "start_time": "2026-02-08T11:48:52.996429Z"
+     "end_time": "2026-02-08T11:50:16.847778Z",
+     "start_time": "2026-02-08T11:50:13.443851Z"
     }
    },
    "source": [
@@ -65,7 +65,7 @@
     "%pip install numpy --break-system-packages"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 11
   },
   {
    "cell_type": "markdown",
@@ -78,8 +78,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-08T11:48:53.989102Z",
-     "start_time": "2026-02-08T11:48:53.983066Z"
+     "end_time": "2026-02-08T11:50:16.854506Z",
+     "start_time": "2026-02-08T11:50:16.848785Z"
     }
    },
    "source": [
@@ -87,7 +87,7 @@
     "from math import pi, sin, cos"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 12
   },
   {
    "cell_type": "markdown",
@@ -139,8 +139,8 @@
    "metadata": {
     "trusted": true,
     "ExecuteTime": {
-     "end_time": "2026-02-08T11:48:53.995284Z",
-     "start_time": "2026-02-08T11:48:53.989652Z"
+     "end_time": "2026-02-08T11:50:16.862498Z",
+     "start_time": "2026-02-08T11:50:16.855005Z"
     }
    },
    "source": [
@@ -157,7 +157,7 @@
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 13
   },
   {
    "cell_type": "markdown",
@@ -182,8 +182,8 @@
    "metadata": {
     "trusted": true,
     "ExecuteTime": {
-     "end_time": "2026-02-08T11:48:54.008003Z",
-     "start_time": "2026-02-08T11:48:54.002363Z"
+     "end_time": "2026-02-08T11:50:16.876957Z",
+     "start_time": "2026-02-08T11:50:16.870498Z"
     }
    },
    "source": [
@@ -205,7 +205,7 @@
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 14
   },
   {
    "cell_type": "markdown",
@@ -227,8 +227,8 @@
    "metadata": {
     "trusted": true,
     "ExecuteTime": {
-     "end_time": "2026-02-08T11:48:54.022625Z",
-     "start_time": "2026-02-08T11:48:54.014821Z"
+     "end_time": "2026-02-08T11:50:16.892801Z",
+     "start_time": "2026-02-08T11:50:16.878736Z"
     }
    },
    "source": [
@@ -251,7 +251,7 @@
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 15
   },
   {
    "cell_type": "markdown",
@@ -282,8 +282,8 @@
    "metadata": {
     "trusted": true,
     "ExecuteTime": {
-     "end_time": "2026-02-08T11:48:54.033749Z",
-     "start_time": "2026-02-08T11:48:54.028105Z"
+     "end_time": "2026-02-08T11:50:16.908889Z",
+     "start_time": "2026-02-08T11:50:16.899514Z"
     }
    },
    "source": [
@@ -304,7 +304,7 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 16
   },
   {
    "cell_type": "markdown",
@@ -343,8 +343,8 @@
    "metadata": {
     "trusted": true,
     "ExecuteTime": {
-     "end_time": "2026-02-08T11:48:54.053367Z",
-     "start_time": "2026-02-08T11:48:54.039405Z"
+     "end_time": "2026-02-08T11:50:16.920073Z",
+     "start_time": "2026-02-08T11:50:16.914521Z"
     }
    },
    "source": [
@@ -370,7 +370,7 @@
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 17
   },
   {
    "cell_type": "markdown",
@@ -416,8 +416,8 @@
    "metadata": {
     "trusted": true,
     "ExecuteTime": {
-     "end_time": "2026-02-08T11:48:54.067078Z",
-     "start_time": "2026-02-08T11:48:54.054258Z"
+     "end_time": "2026-02-08T11:50:16.937129Z",
+     "start_time": "2026-02-08T11:50:16.924423Z"
     }
    },
    "source": [
@@ -459,7 +459,7 @@
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 18
   },
   {
    "cell_type": "markdown",
@@ -469,7 +469,7 @@
     "\n",
     "Compositions in SO(3) follow the same rules as SO(2), where sequential rotations are represented by right multiplications. For instance,\n",
     "\n",
-    "$$\\mymatrix{R}^0_c \\mymatrix{R}^0_a\\mymatrix{R}^a_b\\mymatrix{R}^b_c.$$\n",
+    "$$\\mymatrix{R}^0_c = \\mymatrix{R}^0_a\\mymatrix{R}^a_b\\mymatrix{R}^b_c.$$\n",
     "\n",
     "This can be represented by the following equivalent piece of code using sample angles."
    ]
@@ -479,8 +479,8 @@
    "metadata": {
     "trusted": true,
     "ExecuteTime": {
-     "end_time": "2026-02-08T11:48:54.082984Z",
-     "start_time": "2026-02-08T11:48:54.068586Z"
+     "end_time": "2026-02-08T11:50:16.959108Z",
+     "start_time": "2026-02-08T11:50:16.938508Z"
     }
    },
    "source": [
@@ -513,7 +513,7 @@
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 19
   },
   {
    "cell_type": "markdown",
@@ -521,7 +521,16 @@
    "source": [
     "## Inverse rotations in SO(3)\n",
     "\n",
-    "Inverse operations in SO(3) are analogous to the inversions in SO(2), which are simply matrix transpositions. "
+    "Inverse operations in SO(3) are analogous to the inversions in SO(2), which are simply matrix transpositions.\n",
+    "\n",
+    "For example, we can recover $\\mymatrix{R}^0_a$ from $\\mymatrix{R}^0_c$ using inverse relative rotations as follows.\n",
+    "\n",
+    "$$\\begin{align}\n",
+    "\\mymatrix{R}^0_a &= \\mymatrix{R}^0_c \\mymatrix{R}^c_b \\mymatrix{R}^b_a \\\\\n",
+    "\\mymatrix{R}^0_a &= \\mymatrix{R}^0_c (\\mymatrix{R}^b_c)^T (\\mymatrix{R}^a_b)^T \\\\\n",
+    "\\end{align}$$\n",
+    "\n",
+    "In the example code below, we store this alternative calculation in `R0_a_` to compare it with `R0_a`."
    ]
   },
   {
@@ -529,32 +538,28 @@
    "metadata": {
     "trusted": true,
     "ExecuteTime": {
-     "end_time": "2026-02-08T11:48:54.180705Z",
-     "start_time": "2026-02-08T11:48:54.083625Z"
+     "end_time": "2026-02-08T11:50:16.979017Z",
+     "start_time": "2026-02-08T11:50:16.959692Z"
     }
    },
    "source": [
-    "Ra_ = Rc @ Rb_c.T @ Ra_b.T \n",
+    "R0_a_ = R0_c @ Rb_c.T @ Ra_b.T\n",
     "\n",
-    "if np.allclose(Ra, Ra_):\n",
+    "if np.allclose(R0_a, R0_a_):\n",
     "    print('The results are pretty much the same!')\n",
     "else:\n",
-    "    print('The results are too different.')\n"
+    "    print('The results are too different.')"
    ],
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'Rc' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
-      "\u001B[31mNameError\u001B[39m                                 Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[10]\u001B[39m\u001B[32m, line 1\u001B[39m\n\u001B[32m----> \u001B[39m\u001B[32m1\u001B[39m Ra_ = \u001B[43mRc\u001B[49m @ Rb_c.T @ Ra_b.T \n\u001B[32m      3\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m np.allclose(Ra, Ra_):\n\u001B[32m      4\u001B[39m     \u001B[38;5;28mprint\u001B[39m(\u001B[33m'\u001B[39m\u001B[33mThe results are pretty much the same!\u001B[39m\u001B[33m'\u001B[39m)\n",
-      "\u001B[31mNameError\u001B[39m: name 'Rc' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The results are pretty much the same!\n"
      ]
     }
    ],
-   "execution_count": 10
+   "execution_count": 20
   },
   {
    "cell_type": "markdown",
@@ -623,7 +628,11 @@
   {
    "cell_type": "code",
    "metadata": {
-    "trusted": true
+    "trusted": true,
+    "ExecuteTime": {
+     "end_time": "2026-02-08T11:50:16.991190Z",
+     "start_time": "2026-02-08T11:50:16.979684Z"
+    }
    },
    "source": [
     "# An SE(3) translation\n",
@@ -653,8 +662,16 @@
     "else:\n",
     "    print('The results are far, therefore the operation is not commutative')"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The results are far, therefore the operation is not commutative\n"
+     ]
+    }
+   ],
+   "execution_count": 21
   },
   {
    "cell_type": "markdown",
@@ -675,7 +692,11 @@
   {
    "cell_type": "code",
    "metadata": {
-    "trusted": true
+    "trusted": true,
+    "ExecuteTime": {
+     "end_time": "2026-02-08T11:50:17.004496Z",
+     "start_time": "2026-02-08T11:50:16.992720Z"
+    }
    },
    "source": [
     "# Extract R from H\n",
@@ -697,8 +718,23 @@
     "\n",
     "print(f\"H0_b @ H0_b_inv = {H0_b @ H0_b_inv}\")"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H0_b_inv=[[ 0.70710678  0.70710678  0.         -2.12132034]\n",
+      " [-0.70710678  0.70710678  0.         -0.70710678]\n",
+      " [ 0.          0.          1.         -3.        ]\n",
+      " [ 0.          0.          0.          1.        ]]\n",
+      "H0_b @ H0_b_inv = [[1.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
+      " [0.00000000e+00 1.00000000e+00 0.00000000e+00 2.22044605e-16]\n",
+      " [0.00000000e+00 0.00000000e+00 1.00000000e+00 0.00000000e+00]\n",
+      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 1.00000000e+00]]\n"
+     ]
+    }
+   ],
+   "execution_count": 22
   },
   {
    "metadata": {},
@@ -718,7 +754,12 @@
    ]
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-08T11:50:17.009164Z",
+     "start_time": "2026-02-08T11:50:17.004981Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "θ_a = pi/4.0 # As given in the exercise\n",
@@ -726,7 +767,7 @@
     "R_a = None # Replace None with your solution to this exercise."
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 23
   },
   {
    "metadata": {},
@@ -740,7 +781,12 @@
    ]
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-08T11:50:17.013166Z",
+     "start_time": "2026-02-08T11:50:17.009517Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "θ_b1 = pi/12.0 # As given in the exercise\n",
@@ -749,7 +795,7 @@
     "R_b = None # Replace None with your solution to this exercise."
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 24
   },
   {
    "metadata": {},
@@ -777,7 +823,12 @@
    ]
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-08T11:50:17.017113Z",
+     "start_time": "2026-02-08T11:50:17.013532Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "θ_c = pi/3.0 # As given in the exercise\n",
@@ -787,7 +838,7 @@
     "H_c = None # Replace None with your solution to this exercise."
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 25
   },
   {
    "metadata": {},
@@ -801,7 +852,12 @@
    ]
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-08T11:50:17.020570Z",
+     "start_time": "2026-02-08T11:50:17.017417Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "θ_d = pi/3.0 # As given in the exercise\n",
@@ -811,7 +867,7 @@
     "H_d = None # Replace None with your solution to this exercise."
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 26
   },
   {
    "metadata": {},
